testing env vars

--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -4,6 +4,11 @@ pipeline {
     environment {
         GITHUB_TOKEN = credentials('GITHUB_TOKEN')  // Fetch GitHub token securely
         REPO_LIST_FILE = "${WORKSPACE}/github_repos.txt"  // Store repo list in workspace
+        // pass these to the loaded jenkinsfile
+        OPTIONS = "${ params.Options }"
+        AWS_ACCOUNT_ID = "${ params.Account }"
+        SUBDOMAIN = "${ params.Subdomain }"
+        JENKINSFILE_PATH = "${ params.JenkinsFilePath }"
     }
 
     stages {
@@ -72,6 +77,33 @@ pipeline {
                     )
 
                     env.BRANCH = selectedBranch
+                }
+            }
+        }
+
+        stage('Clone and Execute Selected Repository') {
+            steps {
+                script {
+                    echo "Cloning repository: ${env.GIT_REPO} - Branch: ${env.BRANCH}"
+                    
+                    sh """
+                    rm -rf selected_repo && git clone -b ${env.BRANCH} ${env.GIT_REPO} selected_repo
+                    cd selected_repo
+                    """
+
+                    def repoJenkinsfile = readFile("selected_repo/${JENKINSFILE_PATH}/Jenkinsfile")
+                    writeFile file: 'Jenkinsfile', text: repoJenkinsfile
+
+                    echo "Jenkinsfile from repository:"
+                    sh "cat Jenkinsfile"
+                }
+            }
+        }
+
+        stage('Execute Repository Jenkinsfile') {
+            steps {
+                script {
+                    load "Jenkinsfile"
                 }
             }
         }
