trying build job

--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -103,7 +103,15 @@ pipeline {
         stage('Execute Repository Jenkinsfile') {
             steps {
                 script {
-                    load "Jenkinsfile"
+                    build job: 'Your-Repo-Job-Name', 
+                        parameters: [
+                            string(name: 'OPTIONS', value: env.OPTIONS),
+                            string(name: 'AWS_ACCOUNT_ID', value: env.AWS_ACCOUNT_ID),
+                            string(name: 'SUBDOMAIN', value: env.SUBDOMAIN),
+                            string(name: 'GIT_REPO', value: env.GIT_REPO),
+                            string(name: 'BRANCH', value: env.BRANCH),
+                            string(name: 'JENKINSFILE_PATH', value: env.JENKINSFILE_PATH)
+                        ]
                 }
             }
         }
